--- a/app/src/main/res/layout/dialog_layout.xml
+++ b/app/src/main/res/layout/dialog_layout.xml
@@ -25,7 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:fontFamily="@font/raleway_light"
-        android:hint="Название"
+        android:hint="Текст заметки"
         android:inputType="text"
         android:padding="8dp"
         android:textColor="@color/blue"
